projects/compiler/test/typechecker/typeidentifier/error_modalias_typeargs_too_many.out
Error at %FILE_NAME%:3:10
Incorrect number of type arguments
  |  val _: e.Color<Int, Int, Int, Int>[] = []
              ^
Expected 3, but 4 were passed
